Fix game logic, add playerWin and computerWin to make code a bit more readable

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,11 +55,6 @@ body {
     min-height: 100px;
 }
 
-#start-button {
-    position: absolute;
-    left: 46vw;
-}
-
 .field-box {
     margin: 5px
 }
@@ -71,7 +66,21 @@ body {
 
 /* Player hand section styles*/
 #player-side {
-    margin: 45px;
+    margin: 26px;
+}
+
+/* Keeps the free floating buttons centered */
+.button-container {
+    position: relative;
+    width: 100%;
+    height: 30px;
+}
+
+#start-button {
+    font-family: 'Source Code Pro', sans-serif;
+    font-size: medium;
+    margin: auto;
+    padding: 5px;
 }
 
 #player-hand {
@@ -105,16 +114,18 @@ body {
 
 .card:hover {
     border: 4px solid #84A86D;
+    background-color: lightgray;
 }
 
 #play-card-button {
     font-family: 'Source Code Pro', sans-serif;
+    font-size: medium;
     margin: auto;
-
+    padding: 5px;
 }
 
 #play-card-button:hover {
-    background-color: gray;
+    background-color: lightgray;
 }
 
 /* Media Queries */
